--- a/pom.xml
+++ b/pom.xml
@@ -25,9 +25,14 @@
 
         <!-- JSTL for JSP pages -->
         <dependency>
-            <groupId>javax.servlet</groupId>
-            <artifactId>jstl</artifactId>
-            <version>1.2</version>
+            <groupId>jakarta.servlet.jsp.jstl</groupId>
+            <artifactId>jakarta.servlet.jsp.jstl-api</artifactId>
+            <version>2.0.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.glassfish.web</groupId>
+            <artifactId>jakarta.servlet.jsp.jstl</artifactId>
+            <version>2.0.0</version>
         </dependency>
 
         <!-- SQL Server JDBC Driver -->
@@ -37,10 +42,15 @@
             <version>12.4.2.jre8</version> <!-- chọn bản theo JDK -->
         </dependency>
         <dependency>
-            <groupId>javax</groupId>
+            <groupId>javax</groupId>    
             <artifactId>javaee-web-api</artifactId>
             <version>7.0</version>
             <type>jar</type>
+        </dependency>
+        <dependency>
+            <groupId>com.sun.mail</groupId>
+            <artifactId>jakarta.mail</artifactId>
+            <version>2.0.1</version>
         </dependency>
     </dependencies>
 
