--- a/Downloads/HouseholdGoods_Group7_SWP391-main (5)/HouseholdGoods_Group7_SWP391-main/pom.xml
+++ b/Downloads/HouseholdGoods_Group7_SWP391-main (5)/HouseholdGoods_Group7_SWP391-main/pom.xml
@@ -25,9 +25,14 @@
 
         <!-- JSTL for JSP pages -->
         <dependency>
-            <groupId>javax.servlet</groupId>
-            <artifactId>jstl</artifactId>
-            <version>1.2</version>
+            <groupId>jakarta.servlet.jsp.jstl</groupId>
+            <artifactId>jakarta.servlet.jsp.jstl-api</artifactId>
+            <version>2.0.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.glassfish.web</groupId>
+            <artifactId>jakarta.servlet.jsp.jstl</artifactId>
+            <version>2.0.0</version>
         </dependency>
 
         <!-- SQL Server JDBC Driver -->
